[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/WhisperChatPanel.gd" id="1"]

[node name="WhisperChatPanel" type="Panel"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WhisperTabs" type="TabBar" parent="VBox"]
layout_mode = 2

[node name="HeaderBar" type="PanelContainer" parent="VBox"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="VBox/HeaderBar"]
layout_mode = 2

[node name="Title" type="Label" parent="VBox/HeaderBar/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "PRIVATE CHANNEL"

[node name="CloseButton" type="Button" parent="VBox/HeaderBar/HBox"]
layout_mode = 2
text = "Ã—"

[node name="Content" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBox" type="HBoxContainer" parent="VBox/Content"]
layout_mode = 2
size_flags_vertical = 3

[node name="SidebarVBox" type="VBoxContainer" parent="VBox/Content/HBox"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Portrait" type="ColorRect" parent="VBox/Content/HBox/SidebarVBox"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
color = Color(0.5, 0.5, 0.5, 1)

[node name="NPCName" type="Label" parent="VBox/Content/HBox/SidebarVBox"]
layout_mode = 2
text = "Vex"
horizontal_alignment = 1

[node name="ChatVBox" type="VBoxContainer" parent="VBox/Content/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ChatLog" type="RichTextLabel" parent="VBox/Content/HBox/ChatVBox"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="InputBox" type="HBoxContainer" parent="VBox/Content/HBox/ChatVBox"]
layout_mode = 2

[node name="InputLine" type="LineEdit" parent="VBox/Content/HBox/ChatVBox/InputBox"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Whisper..."

[node name="SendButton" type="Button" parent="VBox/Content/HBox/ChatVBox/InputBox"]
layout_mode = 2
text = "Send"


